    location inside the git directory, and also caused pointer files to not
    get populated.
  * fsck: Fix location of annexed files when run in linked worktrees
    that have experienced the above bug.
  * Fix symlinks generated to annexed content when in adjusted unlocked
    branch in a linked worktree on a filesystem not supporting symlinks.

 -- Joey Hess <id@joeyh.name>  Mon, 07 Jul 2025 15:59:42 -0400

git-annex (10.20250630) upstream; urgency=medium

  * Work around git 2.50 bug that caused it to crash when there is a merge
    conflict with an unlocked annexed file.
  * Skip and warn when a tree import includes empty filenames,
    which can happen with eg a S3 bucket.
  * Avoid a problem with temp file names ending in whitespace on
    filesystems like VFAT that don't support such filenames.
  * webapp: Rename "Upgrade Repository" to "Convert Repository"
    to avoid confusion with git-annex upgrade.

 -- Joey Hess <id@joeyh.name>  Mon, 30 Jun 2025 10:05:18 -0400

git-annex (10.20250605) upstream; urgency=medium

  * sync: Push the current branch first, rather than a synced branch,
    to better support git forges (gitlab, gitea, forgejo, etc.) which
    use push-to-create with the first pushed branch becoming the default
    branch.
  * Added annex.fastcopy and remote.name.annex-fastcopy config setting.
    When set, this allows the copy_file_range syscall to be used, which
    can eg allow for server-side copies on NFS. (For fastest copying, 
    also disable annex.verify or remote.name.annex-verify.)
  * map: Support --json option.
  * map: Improve display of remote names.
  * When annex.freezecontent-command or annex.thawcontent-command is
    configured but fails, prevent initialization. This allows the user to
    fix their configuration and avoid crippled filesystem detection
    entering an adjusted branch.
  * assistant: Avoid hanging at startup when a process has a *.lock file
    open in the .git directory.